<resources>
    <string name="app_name">FreeCreate</string>
    <string name="permission_title_dialog">权限申请</string>
    <string name="permission_message_failed">我们需要的一些必要权限被禁止，请授权给我们。</string>
    <string name="permission_ok">好的</string>
    <string name="permission_no">不给你</string>
    <string name="package_name">com.fc.rain.freecreate</string>

    <string name="hint_add_friend">请输入你要添加的用户名</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="delete_care">删除提示</string>
    <string name="delete_care_friend">是否删除该好友</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="add_success">添加成功</string>
    <string name="agree_request_friend">你们已成为好友</string>
    <string name="disagree_request_friend">不理你</string>
    <string name="agree">同意</string>
    <string name="disagree">拒绝</string>
    <string name="request_add_friend">请求加为好友</string>
    <string name="request_friend">好友申请</string>
    <string name="already_agree_your_request">已同意您的申请</string>
    <string name="already_disagree_your_request">已拒绝您的申请</string>
    <string name="delete">已拒绝您的申请</string>
    <string name="already_delete_friend">已被删除</string>
    <string name="already_add_friend">成为了您的好友</string>
    <string name="add_friend">添加好友</string>
    <string name="exit_login">退出登录</string>
    <string name="already_user_deleted">帐号已经被移除</string>
    <string name="already_user_login_in_other">帐号在其他设备登录</string>
    <string name="connection_no_network">当前网络不可用，请检查网络设置</string>
    <string name="connection_chat_fail">连接不到聊天服务器</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_password_again">请再次输入密码</string>
    <string name="hint_email">请输入email地址</string>
    <string name="login">登录</string>
    <string name="login_en">Login</string>
    <string name="register_en">Register</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="check_email">验证邮箱</string>
    <string name="check_email_success">请输入正确的邮箱地址</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="check_password">两次输入的密码不一致，请重新输入</string>
    <string name="username_or_password_no_empty">用户名或密码不能为空</string>
    <string name="login_chat_success">登录聊天服务器成功！</string>
    <string name="login_chat_fail">登录聊天服务器失败: </string>
    <string name="register_fail">注册失败: </string>
    <string name="update_fail">更新失败: </string>
    <string name="login_fail">登录失败: </string>
    <string name="exit_app_again">再按一次退出程序</string>
    <string name="message">消息</string>
    <string name="friend">好友</string>
    <string name="update_friend_list_fail">更新好友列表失败</string>
    <string name="get_friend_list_fail">获取好友列表失败，请稍后重试 : </string>
    <string name="loading">正在加载中...</string>
    <string name="title_chat">聊天</string>
    <string name="hx_connection_error">连接环信聊天失败，请重新登录</string>
    <string name="title_login">FreeCreate</string>
    <string name="request_version_fail">获取版本号失败!</string>
    <string name="hot_update_success">热更新成功!</string>
    <string name="hot_update_need_restart">热更新需要重启!</string>
    <string name="title_keep_accounts">记账</string>

</resources>
