<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="@dimen/npx650"
                android:layout_height="800px"
                android:layout_centerInParent="true"
                app:cardBackgroundColor="@color/color_F1FBFA_white"
                app:cardCornerRadius="@dimen/npx20"
                app:cardElevation="@dimen/npx50"
                app:cardPreventCornerOverlap="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/npx100"
                    android:paddingRight="@dimen/npx100">

                    <TextView
                        android:id="@+id/tv_title"
                        style="@style/tv_white_16sp"
                        android:layout_marginTop="@dimen/npx120"
                        android:text="Login"
                        android:textColor="@color/color_2d2e32"
                        android:textStyle="italic|bold" />

                    <View
                        style="@style/Cut_off_line"
                        android:layout_marginTop="@dimen/npx30" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/npx20"
                        android:orientation="vertical"
                        android:padding="@dimen/npx10">

                        <EditText
                            android:id="@+id/et_name"
                            style="@style/et_hint_cccccc_16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/user_name"
                            android:paddingBottom="@dimen/npx10"
                            android:paddingTop="@dimen/npx30"
                            android:textSize="@dimen/nsp14" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/npx3"
                            android:background="@color/color_2196f3" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/npx20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/npx10">

                        <EditText
                            android:inputType="textPassword"
                            android:id="@+id/et_password"
                            style="@style/et_hint_cccccc_16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/password"
                            android:paddingBottom="@dimen/npx10"
                            android:paddingTop="@dimen/npx30"
                            android:textSize="@dimen/nsp14" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/npx3"
                            android:background="@color/color_2196f3" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/npx30"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/tv_forget_password"
                            android:layout_weight="1"
                            android:paddingTop="@dimen/npx20"
                            android:paddingLeft="@dimen/npx10"
                            android:paddingBottom="@dimen/npx20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forget_password"
                            android:textColor="@color/color_text_a1a139"
                            android:textSize="@dimen/nsp14" />

                        <TextView
                            android:padding="@dimen/npx20"
                            android:id="@+id/tv_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register"
                            android:textColor="@color/color_2196f3"
                            android:textSize="@dimen/nsp14" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/npx80"
                        android:layout_marginTop="@dimen/npx60"
                        android:background="@drawable/btn_1d328d_selector"
                        android:text="@string/login"
                        android:textColor="@color/color_F1FBFA_white" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/npx130">

            <com.fc.rain.freecreate.utils.MyCircleImageView
                android:layout_width="@dimen/npx130"
                android:layout_height="@dimen/npx130"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_my"
                app:border_color="@color/white"
                app:border_overlay="true"
                app:border_width="@dimen/npx10" />
        </FrameLayout>
    </RelativeLayout>
</LinearLayout>
